# poiapiexample

./: LICENSE  README.md  pyproject.toml
poiapiexample/: api.py  example.txt  model.py
tests/: test_model.py
