[project]
name = "poiapiexample"
dynamic = ["version"]
description = "example submodule for the thermal DRONES Microservice Container POI-API"
authors = [
	{ name="Martin Israel", email="m.israel@thermaldrones.de"}
	]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["poiapiexample"]

[tool.setuptools.dynamic]
version = { attr = "poiapiexample.version.__version__" }


[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
